cli/tests/snapshot/inputs/errors/destructuring_type_mismatch_field_pattern_fail.ncl
# capture = 'stderr'
# command = []
(let { a : Number = b } = { a = "x" } in b) : _
